--- a/Zstandard.Net/Zstandard.Net.csproj
+++ b/Zstandard.Net/Zstandard.Net.csproj
@@ -13,7 +13,13 @@
     <PackageTags>Compression Stream Zstandard Zstd</PackageTags>
     <PackageReleaseNotes>Updated native Windows Zstd library to 1.3.3</PackageReleaseNotes>
     <Version>1.1.2</Version>
+    <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
+  <ItemGroup>
+    <Reference Include="netstandard" />
+    <PackageReference Include="NETStandard.Library" Version="2.0.3" />
+    <PackageReference Include="System.Buffers" Version="4.5.0" />
+  </ItemGroup>
 
 	<ItemGroup>
 		<None Include="build\x64\libzstd.dll">
